--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body{
   border-radius:0.5em;
   padding-left: 1.5em;
   padding-top: 1.5em;
+  height:250px;
   
   
 }
@@ -146,11 +147,15 @@ font-weight: 400;
     margin-bottom: 0.7em;
   }
   .description{
-    padding: 0.5em; 
+    padding-top:2.5em;
+    padding-left:0;
+    padding-right:0.5em; 
   }
   .name{
-    padding-top:0.1em;
-   padding:0em;
+    padding-top:0.6em;
+    padding-right:4.5em;
+    padding-left:0;
+  
    margin:0;
    
   }
